[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
float_eq = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

neo4rs = "0.5.9"

signature = "1.3.2"
hex = "0.4.3"
k256 = "0.10.2"
sha2 = "0.10.2"
ripemd = "0.1.1"
rand_core = "0.6.3"
base58 = "0.2.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = "0.4.19"

tokio = "1.17.0"

[patch.crates-io]
neo4rs = { path = "../crates/neo4rs/lib" }